update Java GC flow